parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BOOLEAN
    COMMENT
    INT
    NULL
    STR
    VECTOR

Grammar

Rule 0     S' -> prog
Rule 1     prog -> empty
Rule 2     prog -> func prog
Rule 3     func -> FN ID LPAREN flist RPAREN LESS_THAN TYPE GREATER_THAN LCURLYEBR body RCURLYEBR
Rule 4     func -> FN ID LPAREN flist RPAREN LESS_THAN TYPE GREATER_THAN EQ GREATER_THAN RETURN expr SEMI_COLON
Rule 5     func -> FN ID LPAREN error RPAREN LESS_THAN TYPE GREATER_THAN LCURLYEBR body RCURLYEBR
Rule 6     func -> FN ID LPAREN flist RPAREN LESS_THAN error GREATER_THAN LCURLYEBR body RCURLYEBR
Rule 7     body -> empty
Rule 8     body -> stmt body
Rule 9     stmt -> expr SEMI_COLON
Rule 10    stmt -> defvar SEMI_COLON
Rule 11    stmt -> func SEMI_COLON
Rule 12    stmt -> single_if
Rule 13    stmt -> if_with_else
Rule 14    stmt -> while_loop
Rule 15    stmt -> DO stmt WHILE LSQUAREBR LSQUAREBR expr RSQUAREBR RSQUAREBR
Rule 16    stmt -> for_loop
Rule 17    stmt -> block
Rule 18    stmt -> return_instr SEMI_COLON
Rule 19    stmt -> error SEMI_COLON
Rule 20    stmt -> error
Rule 21    single_if -> IF LSQUAREBR LSQUAREBR expr RSQUAREBR RSQUAREBR stmt
Rule 22    if_with_else -> IF LSQUAREBR LSQUAREBR expr RSQUAREBR RSQUAREBR stmt ELSE stmt
Rule 23    while_loop -> WHILE LSQUAREBR LSQUAREBR expr RSQUAREBR RSQUAREBR stmt
Rule 24    for_loop -> FOR LPAREN ID EQ expr TO expr RPAREN stmt
Rule 25    block -> BEGIN body END
Rule 26    return_instr -> RETURN expr
Rule 27    defvar -> ID DBL_COLON TYPE
Rule 28    defvar -> ID DBL_COLON TYPE EQ expr
Rule 29    flist -> empty
Rule 30    flist -> ID AS TYPE
Rule 31    flist -> ID AS TYPE COMMA flist
Rule 32    flist -> error AS TYPE COMMA flist
Rule 33    flist -> ID error TYPE COMMA flist
Rule 34    flist -> ID AS error COMMA flist
Rule 35    flist -> ID AS TYPE COMMA error
Rule 36    clist -> empty
Rule 37    clist -> expr
Rule 38    clist -> expr COMMA clist
Rule 39    in_methods -> SCAN LPAREN RPAREN
Rule 40    in_methods -> PRINT LPAREN clist RPAREN
Rule 41    in_methods -> LIST LPAREN clist RPAREN
Rule 42    in_methods -> LEN LPAREN clist RPAREN
Rule 43    in_methods -> EXIT LPAREN clist RPAREN
Rule 44    expr -> expr LSQUAREBR expr RSQUAREBR
Rule 45    expr -> LSQUAREBR clist RSQUAREBR
Rule 46    expr -> expr QUESTION expr COLON expr
Rule 47    expr -> expr PLUS expr
Rule 48    expr -> expr MINUS expr
Rule 49    expr -> expr TIMES expr
Rule 50    expr -> expr DIVIDE expr
Rule 51    expr -> expr GREATER_THAN expr
Rule 52    expr -> expr LESS_THAN expr
Rule 53    expr -> expr EQUAL expr
Rule 54    expr -> expr EQ expr
Rule 55    expr -> expr GREATER_THAN_EQUAL_TO expr
Rule 56    expr -> expr LESS_THAN_EQUAL_TO expr
Rule 57    expr -> expr NOT_EQUAL expr
Rule 58    expr -> expr OR expr
Rule 59    expr -> expr AND expr
Rule 60    expr -> NOT expr
Rule 61    expr -> PLUS expr
Rule 62    expr -> MINUS expr
Rule 63    expr -> ID
Rule 64    expr -> assignment
Rule 65    expr -> ID LPAREN clist RPAREN
Rule 66    expr -> NUMBER
Rule 67    expr -> in_methods
Rule 68    expr -> STRING
Rule 69    expr_list -> LSQUAREBR clist RSQUAREBR
Rule 70    operation_on_list -> expr LSQUAREBR expr RSQUAREBR
Rule 71    operation_on_list -> ID LSQUAREBR expr RSQUAREBR
Rule 72    assignment -> ID EQ expr
Rule 73    ternary_expr -> expr QUESTION expr COLON expr
Rule 74    function_call -> ID LPAREN clist RPAREN
Rule 75    function_call -> ID LPAREN error RPAREN
Rule 76    binary_expr -> expr PLUS expr
Rule 77    binary_expr -> expr MINUS expr
Rule 78    binary_expr -> expr TIMES expr
Rule 79    binary_expr -> expr DIVIDE expr
Rule 80    binary_expr -> expr MOD expr
Rule 81    binary_expr -> expr GREATER_THAN expr
Rule 82    binary_expr -> expr GREATER_THAN_EQUAL_TO expr
Rule 83    binary_expr -> expr LESS_THAN expr
Rule 84    binary_expr -> expr LESS_THAN_EQUAL_TO expr
Rule 85    binary_expr -> expr EQ expr
Rule 86    binary_expr -> expr EQUAL expr
Rule 87    binary_expr -> expr NOT expr
Rule 88    binary_expr -> expr NOT_EQUAL expr
Rule 89    binary_expr -> expr OR expr
Rule 90    binary_expr -> expr AND expr
Rule 91    empty -> <empty>

Terminals, with rules where they appear

AND                  : 59 90
AS                   : 30 31 32 34 35
BEGIN                : 25
BOOLEAN              : 
COLON                : 46 73
COMMA                : 31 32 33 34 35 38
COMMENT              : 
DBL_COLON            : 27 28
DIVIDE               : 50 79
DO                   : 15
ELSE                 : 22
END                  : 25
EQ                   : 4 24 28 54 72 85
EQUAL                : 53 86
EXIT                 : 43
FN                   : 3 4 5 6
FOR                  : 24
GREATER_THAN         : 3 4 4 5 6 51 81
GREATER_THAN_EQUAL_TO : 55 82
ID                   : 3 4 5 6 24 27 28 30 31 33 34 35 63 65 71 72 74 75
IF                   : 21 22
INT                  : 
LCURLYEBR            : 3 5 6
LEN                  : 42
LESS_THAN            : 3 4 5 6 52 83
LESS_THAN_EQUAL_TO   : 56 84
LIST                 : 41
LPAREN               : 3 4 5 6 24 39 40 41 42 43 65 74 75
LSQUAREBR            : 15 15 21 21 22 22 23 23 44 45 69 70 71
MINUS                : 48 62 77
MOD                  : 80
NOT                  : 60 87
NOT_EQUAL            : 57 88
NULL                 : 
NUMBER               : 66
OR                   : 58 89
PLUS                 : 47 61 76
PRINT                : 40
QUESTION             : 46 73
RCURLYEBR            : 3 5 6
RETURN               : 4 26
RPAREN               : 3 4 5 6 24 39 40 41 42 43 65 74 75
RSQUAREBR            : 15 15 21 21 22 22 23 23 44 45 69 70 71
SCAN                 : 39
SEMI_COLON           : 4 9 10 11 18 19
STR                  : 
STRING               : 68
TIMES                : 49 78
TO                   : 24
TYPE                 : 3 4 5 27 28 30 31 32 33 35
VECTOR               : 
WHILE                : 15 23
error                : 5 6 19 20 32 33 34 35 75

Nonterminals, with rules where they appear

assignment           : 64
binary_expr          : 
block                : 17
body                 : 3 5 6 8 25
clist                : 38 40 41 42 43 45 65 69 74
defvar               : 10
empty                : 1 7 29 36
expr                 : 4 9 15 21 22 23 24 24 26 28 37 38 44 44 46 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 61 62 70 70 71 72 73 73 73 76 76 77 77 78 78 79 79 80 80 81 81 82 82 83 83 84 84 85 85 86 86 87 87 88 88 89 89 90 90
expr_list            : 
flist                : 3 4 6 31 32 33 34
for_loop             : 16
func                 : 2 11
function_call        : 
if_with_else         : 13
in_methods           : 67
operation_on_list    : 
prog                 : 2 0
return_instr         : 18
single_if            : 12
stmt                 : 8 15 21 22 22 23 24
ternary_expr         : 
while_loop           : 14

Parsing method: LALR

state 0

    (0) S' -> . prog
    (1) prog -> . empty
    (2) prog -> . func prog
    (91) empty -> .
    (3) func -> . FN ID LPAREN flist RPAREN LESS_THAN TYPE GREATER_THAN LCURLYEBR body RCURLYEBR
    (4) func -> . FN ID LPAREN flist RPAREN LESS_THAN TYPE GREATER_THAN EQ GREATER_THAN RETURN expr SEMI_COLON
    (5) func -> . FN ID LPAREN error RPAREN LESS_THAN TYPE GREATER_THAN LCURLYEBR body RCURLYEBR
    (6) func -> . FN ID LPAREN flist RPAREN LESS_THAN error GREATER_THAN LCURLYEBR body RCURLYEBR

    $end            reduce using rule 91 (empty -> .)
    FN              shift and go to state 4

    prog                           shift and go to state 1
    empty                          shift and go to state 2
    func                           shift and go to state 3

state 1

    (0) S' -> prog .



state 2

    (1) prog -> empty .

    $end            reduce using rule 1 (prog -> empty .)


state 3

    (2) prog -> func . prog
    (1) prog -> . empty
    (2) prog -> . func prog
    (91) empty -> .
    (3) func -> . FN ID LPAREN flist RPAREN LESS_THAN TYPE GREATER_THAN LCURLYEBR body RCURLYEBR
    (4) func -> . FN ID LPAREN flist RPAREN LESS_THAN TYPE GREATER_THAN EQ GREATER_THAN RETURN expr SEMI_COLON
    (5) func -> . FN ID LPAREN error RPAREN LESS_THAN TYPE GREATER_THAN LCURLYEBR body RCURLYEBR
    (6) func -> . FN ID LPAREN flist RPAREN LESS_THAN error GREATER_THAN LCURLYEBR body RCURLYEBR

    $end            reduce using rule 91 (empty -> .)
    FN              shift and go to state 4

    func                           shift and go to state 3
    prog                           shift and go to state 5
    empty                          shift and go to state 2

state 4

    (3) func -> FN . ID LPAREN flist RPAREN LESS_THAN TYPE GREATER_THAN LCURLYEBR body RCURLYEBR
    (4) func -> FN . ID LPAREN flist RPAREN LESS_THAN TYPE GREATER_THAN EQ GREATER_THAN RETURN expr SEMI_COLON
    (5) func -> FN . ID LPAREN error RPAREN LESS_THAN TYPE GREATER_THAN LCURLYEBR body RCURLYEBR
    (6) func -> FN . ID LPAREN flist RPAREN LESS_THAN error GREATER_THAN LCURLYEBR body RCURLYEBR

    ID              shift and go to state 6


state 5

    (2) prog -> func prog .

    $end            reduce using rule 2 (prog -> func prog .)


state 6

    (3) func -> FN ID . LPAREN flist RPAREN LESS_THAN TYPE GREATER_THAN LCURLYEBR body RCURLYEBR
    (4) func -> FN ID . LPAREN flist RPAREN LESS_THAN TYPE GREATER_THAN EQ GREATER_THAN RETURN expr SEMI_COLON
    (5) func -> FN ID . LPAREN error RPAREN LESS_THAN TYPE GREATER_THAN LCURLYEBR body RCURLYEBR
    (6) func -> FN ID . LPAREN flist RPAREN LESS_THAN error GREATER_THAN LCURLYEBR body RCURLYEBR

    LPAREN          shift and go to state 7


state 7

    (3) func -> FN ID LPAREN . flist RPAREN LESS_THAN TYPE GREATER_THAN LCURLYEBR body RCURLYEBR
    (4) func -> FN ID LPAREN . flist RPAREN LESS_THAN TYPE GREATER_THAN EQ GREATER_THAN RETURN expr SEMI_COLON
    (5) func -> FN ID LPAREN . error RPAREN LESS_THAN TYPE GREATER_THAN LCURLYEBR body RCURLYEBR
    (6) func -> FN ID LPAREN . flist RPAREN LESS_THAN error GREATER_THAN LCURLYEBR body RCURLYEBR
    (29) flist -> . empty
    (30) flist -> . ID AS TYPE
    (31) flist -> . ID AS TYPE COMMA flist
    (32) flist -> . error AS TYPE COMMA flist
    (33) flist -> . ID error TYPE COMMA flist
    (34) flist -> . ID AS error COMMA flist
    (35) flist -> . ID AS TYPE COMMA error
    (91) empty -> .

    error           shift and go to state 10
    ID              shift and go to state 8
    RPAREN          reduce using rule 91 (empty -> .)

    flist                          shift and go to state 9
    empty                          shift and go to state 11

state 8

    (30) flist -> ID . AS TYPE
    (31) flist -> ID . AS TYPE COMMA flist
    (33) flist -> ID . error TYPE COMMA flist
    (34) flist -> ID . AS error COMMA flist
    (35) flist -> ID . AS TYPE COMMA error

    AS              shift and go to state 12
    error           shift and go to state 13


state 9

    (3) func -> FN ID LPAREN flist . RPAREN LESS_THAN TYPE GREATER_THAN LCURLYEBR body RCURLYEBR
    (4) func -> FN ID LPAREN flist . RPAREN LESS_THAN TYPE GREATER_THAN EQ GREATER_THAN RETURN expr SEMI_COLON
    (6) func -> FN ID LPAREN flist . RPAREN LESS_THAN error GREATER_THAN LCURLYEBR body RCURLYEBR

    RPAREN          shift and go to state 14


state 10

    (5) func -> FN ID LPAREN error . RPAREN LESS_THAN TYPE GREATER_THAN LCURLYEBR body RCURLYEBR
    (32) flist -> error . AS TYPE COMMA flist

    RPAREN          shift and go to state 15
    AS              shift and go to state 16


state 11

    (29) flist -> empty .

    RPAREN          reduce using rule 29 (flist -> empty .)


state 12

    (30) flist -> ID AS . TYPE
    (31) flist -> ID AS . TYPE COMMA flist
    (34) flist -> ID AS . error COMMA flist
    (35) flist -> ID AS . TYPE COMMA error

    TYPE            shift and go to state 17
    error           shift and go to state 18


state 13

    (33) flist -> ID error . TYPE COMMA flist

    TYPE            shift and go to state 19


state 14

    (3) func -> FN ID LPAREN flist RPAREN . LESS_THAN TYPE GREATER_THAN LCURLYEBR body RCURLYEBR
    (4) func -> FN ID LPAREN flist RPAREN . LESS_THAN TYPE GREATER_THAN EQ GREATER_THAN RETURN expr SEMI_COLON
    (6) func -> FN ID LPAREN flist RPAREN . LESS_THAN error GREATER_THAN LCURLYEBR body RCURLYEBR

    LESS_THAN       shift and go to state 20


state 15

    (5) func -> FN ID LPAREN error RPAREN . LESS_THAN TYPE GREATER_THAN LCURLYEBR body RCURLYEBR

    LESS_THAN       shift and go to state 21


state 16

    (32) flist -> error AS . TYPE COMMA flist

    TYPE            shift and go to state 22


state 17

    (30) flist -> ID AS TYPE .
    (31) flist -> ID AS TYPE . COMMA flist
    (35) flist -> ID AS TYPE . COMMA error

    RPAREN          reduce using rule 30 (flist -> ID AS TYPE .)
    COMMA           shift and go to state 23


state 18

    (34) flist -> ID AS error . COMMA flist

    COMMA           shift and go to state 24


state 19

    (33) flist -> ID error TYPE . COMMA flist

    COMMA           shift and go to state 25


state 20

    (3) func -> FN ID LPAREN flist RPAREN LESS_THAN . TYPE GREATER_THAN LCURLYEBR body RCURLYEBR
    (4) func -> FN ID LPAREN flist RPAREN LESS_THAN . TYPE GREATER_THAN EQ GREATER_THAN RETURN expr SEMI_COLON
    (6) func -> FN ID LPAREN flist RPAREN LESS_THAN . error GREATER_THAN LCURLYEBR body RCURLYEBR

    TYPE            shift and go to state 26
    error           shift and go to state 27


state 21

    (5) func -> FN ID LPAREN error RPAREN LESS_THAN . TYPE GREATER_THAN LCURLYEBR body RCURLYEBR

    TYPE            shift and go to state 28


state 22

    (32) flist -> error AS TYPE . COMMA flist

    COMMA           shift and go to state 29


state 23

    (31) flist -> ID AS TYPE COMMA . flist
    (35) flist -> ID AS TYPE COMMA . error
    (29) flist -> . empty
    (30) flist -> . ID AS TYPE
    (31) flist -> . ID AS TYPE COMMA flist
    (32) flist -> . error AS TYPE COMMA flist
    (33) flist -> . ID error TYPE COMMA flist
    (34) flist -> . ID AS error COMMA flist
    (35) flist -> . ID AS TYPE COMMA error
    (91) empty -> .

    error           shift and go to state 31
    ID              shift and go to state 8
    RPAREN          reduce using rule 91 (empty -> .)

    flist                          shift and go to state 30
    empty                          shift and go to state 11

state 24

    (34) flist -> ID AS error COMMA . flist
    (29) flist -> . empty
    (30) flist -> . ID AS TYPE
    (31) flist -> . ID AS TYPE COMMA flist
    (32) flist -> . error AS TYPE COMMA flist
    (33) flist -> . ID error TYPE COMMA flist
    (34) flist -> . ID AS error COMMA flist
    (35) flist -> . ID AS TYPE COMMA error
    (91) empty -> .

    ID              shift and go to state 8
    error           shift and go to state 32
    RPAREN          reduce using rule 91 (empty -> .)

    flist                          shift and go to state 33
    empty                          shift and go to state 11

state 25

    (33) flist -> ID error TYPE COMMA . flist
    (29) flist -> . empty
    (30) flist -> . ID AS TYPE
    (31) flist -> . ID AS TYPE COMMA flist
    (32) flist -> . error AS TYPE COMMA flist
    (33) flist -> . ID error TYPE COMMA flist
    (34) flist -> . ID AS error COMMA flist
    (35) flist -> . ID AS TYPE COMMA error
    (91) empty -> .

    ID              shift and go to state 8
    error           shift and go to state 32
    RPAREN          reduce using rule 91 (empty -> .)

    flist                          shift and go to state 34
    empty                          shift and go to state 11

state 26

    (3) func -> FN ID LPAREN flist RPAREN LESS_THAN TYPE . GREATER_THAN LCURLYEBR body RCURLYEBR
    (4) func -> FN ID LPAREN flist RPAREN LESS_THAN TYPE . GREATER_THAN EQ GREATER_THAN RETURN expr SEMI_COLON

    GREATER_THAN    shift and go to state 35


state 27

    (6) func -> FN ID LPAREN flist RPAREN LESS_THAN error . GREATER_THAN LCURLYEBR body RCURLYEBR

    GREATER_THAN    shift and go to state 36


state 28

    (5) func -> FN ID LPAREN error RPAREN LESS_THAN TYPE . GREATER_THAN LCURLYEBR body RCURLYEBR

    GREATER_THAN    shift and go to state 37


state 29

    (32) flist -> error AS TYPE COMMA . flist
    (29) flist -> . empty
    (30) flist -> . ID AS TYPE
    (31) flist -> . ID AS TYPE COMMA flist
    (32) flist -> . error AS TYPE COMMA flist
    (33) flist -> . ID error TYPE COMMA flist
    (34) flist -> . ID AS error COMMA flist
    (35) flist -> . ID AS TYPE COMMA error
    (91) empty -> .

    ID              shift and go to state 8
    error           shift and go to state 32
    RPAREN          reduce using rule 91 (empty -> .)

    flist                          shift and go to state 38
    empty                          shift and go to state 11

state 30

    (31) flist -> ID AS TYPE COMMA flist .

    RPAREN          reduce using rule 31 (flist -> ID AS TYPE COMMA flist .)


state 31

    (35) flist -> ID AS TYPE COMMA error .
    (32) flist -> error . AS TYPE COMMA flist

    RPAREN          reduce using rule 35 (flist -> ID AS TYPE COMMA error .)
    AS              shift and go to state 16


state 32

    (32) flist -> error . AS TYPE COMMA flist

    AS              shift and go to state 16


state 33

    (34) flist -> ID AS error COMMA flist .

    RPAREN          reduce using rule 34 (flist -> ID AS error COMMA flist .)


state 34

    (33) flist -> ID error TYPE COMMA flist .

    RPAREN          reduce using rule 33 (flist -> ID error TYPE COMMA flist .)


state 35

    (3) func -> FN ID LPAREN flist RPAREN LESS_THAN TYPE GREATER_THAN . LCURLYEBR body RCURLYEBR
    (4) func -> FN ID LPAREN flist RPAREN LESS_THAN TYPE GREATER_THAN . EQ GREATER_THAN RETURN expr SEMI_COLON

    LCURLYEBR       shift and go to state 39
    EQ              shift and go to state 40


state 36

    (6) func -> FN ID LPAREN flist RPAREN LESS_THAN error GREATER_THAN . LCURLYEBR body RCURLYEBR

    LCURLYEBR       shift and go to state 41


state 37

    (5) func -> FN ID LPAREN error RPAREN LESS_THAN TYPE GREATER_THAN . LCURLYEBR body RCURLYEBR

    LCURLYEBR       shift and go to state 42


state 38

    (32) flist -> error AS TYPE COMMA flist .

    RPAREN          reduce using rule 32 (flist -> error AS TYPE COMMA flist .)


state 39
